Prevent video title word wrap

--- a/src/app/shared/video-panel/video-panel.component.scss
+++ b/src/app/shared/video-panel/video-panel.component.scss
@@ -144,6 +144,12 @@
   width: 100%;
 }
 
+.footer .footer__video-title {
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+
 .footer .video-stats {
   display: flex;
   font-size: $font-size-x-small;
